booking details page changes

--- a/booking_details.html
+++ b/booking_details.html
@@ -75,28 +75,54 @@
      </div>
    </div>
    <a href="my-trip.html">
-   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
-     <div class="form-group m-0 px-2 py-2">
-      <h6 class="text-center"><b>Booking ID :-</b>E23456789</h6>
-     </div>
-     <div class="row m-0 px-2 py-2">
-       <div class="col-6 p-0 text-center car_book">
-        <h5>Hyundai sonata</h5>
-         <img src="assets/images/standard.jpg" class="" style="height: 93px;width: 140px">
-       </div><!--------------col-4 close---------->
-       <div class="col-6 p-0 px-1 py-1 justify-content-center">
-          <h5 class="mb-0 mb-1"><b>5 Seats | 4 Doors</b></h5>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Air Conditioning</p>
-          <p class="mb-0 text-lig"><i class="fas fa-check text-success"></i> Automatic</p>
-          <p class="mb-0 text-lig"><i class="fas fa-gas-pump"></i> Full to Full</p>
-       </div><!--------------col-6 close---------->
-     </div><!--------------row close---------->
-     <div class="row m-0 px-2 py-2 border-top">
-       <div class="col-12  p-0 d-flex align-items-center px-1">
-         <button class="btn btn-success text-center px-1 w-100">Confirm</button>
-       </div><!--------------col-2 close---------->
+    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-1 sd2 f-cga car_book">
+     <div class="form-group m-0 px-2 py-2 text-center">
+      <img src="assets/images/standard.jpg" class="" style="height: 116px;width: 175px">
      </div>
    </div><!--------------card close---------->
+   <div class="card col-md-8 offset-md-2 px-2 py-2 mb-1 sd2 f-cga car_book rounded">
+    <table class="table table-borderless text-center mb-0">
+      <tbody>
+       <tr class="border-bottom">
+         <th class="text-left p-1">Hyundai sonata</th>
+         <th class="text-right p-1">Booking id:E23456</th>
+       </tr>
+       <tr class="text-lig">
+         <td class="text-left p-1">PickUp Time</td>
+         <td class="text-right p-1">Drop-Off Time</td>
+       </tr>
+       <tr>
+         <td class="text-left p-1">2019/08/26, 12:05 pm</td>
+         <td class="text-right p-1">2019/08/28, 01:05 am</td>
+       </tr>
+      </tbody>
+     </table>
+     <div class="form-group text-lig mb-0 mt-1">
+       <p class="mb-0 text-truncate p-1"><i class="fas fa-map-marker-alt"></i> Riyadh, Saudi Arabia</p>
+     </div>
+   </div><!--------------card close---------->
+   <div class="card col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book rounded">
+     <table class="table table-borderless text-center mb-0">
+        <tbody>
+         <tr class="border-bottom">
+           <th class="text-left p-1">Payment summary:</th>
+           <th class="text-right p-1"></th>
+         </tr>
+         <tr class="">
+           <td class="text-left p-1 text-lig">Total Cost</td>
+           <td class="text-right p-1 text-lig">5530 SAR</td>
+         </tr>
+         <tr class="border-bottom">
+           <td class="text-left p-1"><b>You Paid</b></td>
+           <td class="text-right p-1"><b>5530 SAR</b></td>
+         </tr>
+          <tr class="text-success">
+           <td class="text-left p-1">Balance</td>
+           <td class="text-right p-1">0 SAR</td>
+         </tr>
+        </tbody>
+      </table>
+    </div>
    </a>
 </div>
 
