--- a/my-trip.html
+++ b/my-trip.html
@@ -74,7 +74,7 @@
        </div>
      </div>
    </div>
-   <a href="my-trip.html">
+   <a href="booking_details.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
      <div class="form-group m-0 px-2 py-1 border-bottom">
       <h6 class="text-center text-lig mb-0"><b>Booking ID :-</b>E23456789</h6>
@@ -121,7 +121,7 @@
      </div><!--------------row close---------->
    </div><!--------------card close---------->
    </a>
-   <a href="my-trip.html">
+   <a href="booking_details.html">
    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book">
      <div class="form-group m-0 px-2 py-1 border-bottom">
       <h6 class="text-center text-lig mb-0"><b>Booking ID :-</b>E23456789</h6>
