table class name adding

--- a/my-trip.html
+++ b/my-trip.html
@@ -95,7 +95,7 @@
            <p class="mb-0 text-lig text-truncate">
              <i class="fas fa-map-pin text-danger"></i> Riyadh, Near hotel royal, Saudi Arabia
            </p> -->
-           <table class="table table-borderless text-center text-lig mb-0">
+           <table class="table table-borderless text-center text-lig mb-0 mytrip_tbl">
              <tbody>
                <tr>
                  <th class="text-left">Start</th>
