--- a/booking_details.html
+++ b/booking_details.html
@@ -75,13 +75,13 @@
      </div>
    </div>
    <a href="my-trip.html">
-    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-1 sd2 f-cga car_book">
+    <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-2 sd2 f-cga car_book">
      <div class="form-group m-0 px-2 py-2 text-center">
       <img src="assets/images/standard.jpg" class="" style="height: 116px;width: 175px">
      </div>
    </div><!--------------card close---------->
-   <div class="card col-md-8 offset-md-2 px-2 py-2 mb-1 sd2 f-cga car_book rounded">
-    <table class="table table-borderless text-center mb-0">
+   <div class="card col-md-8 offset-md-2 px-2 py-2 mb-2 sd2 f-cga car_book rounded">
+    <table class="col-lg-8 mx-auto table table-borderless text-center mb-0">
       <tbody>
        <tr class="border-bottom">
          <th class="text-left p-1">Hyundai sonata</th>
@@ -97,12 +97,12 @@
        </tr>
       </tbody>
      </table>
-     <div class="form-group text-lig mb-0 mt-1">
+     <div class="col-lg-8 mx-auto form-group text-lig mb-0 mt-1">
        <p class="mb-0 text-truncate p-1"><i class="fas fa-map-marker-alt"></i> Riyadh, Saudi Arabia</p>
      </div>
    </div><!--------------card close---------->
    <div class="card col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 f-cga car_book rounded">
-     <table class="table table-borderless text-center mb-0">
+     <table class="col-lg-8 mx-auto table table-borderless text-center mb-0">
         <tbody>
          <tr class="border-bottom">
            <th class="text-left p-1">Payment summary:</th>
